fixed scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -362,11 +362,13 @@ h1 {
     }
 
     .main-heading {
-        font-size: 3.2em
+        font-size: 3.2em;
+        align-self: flex-start
     }
 
     .main-sub-heading {
-        font-size: 1.1em
+        font-size: 1.1em;
+        transform: translateY(-10px)
     }
 
     .about-us {
